--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a-assets>
         <audio 
           id="starwars-music" 
-          src="https://raw.githubusercontent.com/isaoinvest/AI-coding-AR-TEST/main/Star Wars Main Title.mp3" 
+          src="https://pub-ac80c6d0a305452bbe0bdfcec65b6a2c.r2.dev/Star%20Wars%20Main%20Title.mp3" 
           preload="auto"
         ></audio>
       </a-assets>
