--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <a-assets>
         <audio 
           id="starwars-music" 
-          src="https://pub-ac80c6d0a305452bbe0bdfcec65b6a2c.r2.dev/starwar.mp3" 
+          src="https://pub-ac80c6d0a305452bbe0bdfcec65b6a2c.r2.dev/starwar2.mp4" 
           preload="auto"
           crossorigin="anonymous"
           volume="0.7"
