--- a/index.html
+++ b/index.html
@@ -123,19 +123,6 @@
         pointer-events: none;
       }
 
-      /* 頂部遮罩區域，讓字幕在此區域逐漸消失 */
-      #star-wars-crawl::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 25%;
-        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, transparent 100%);
-        z-index: 2;
-        pointer-events: none;
-      }
-
       .crawl-container {
         position: absolute;
         top: 100%;
@@ -170,6 +157,8 @@
         word-wrap: break-word;
         overflow-wrap: break-word;
         max-width: 100%;
+        opacity: 1;
+        transition: opacity 0.5s ease-out;
       }
 
       .title {
@@ -181,6 +170,8 @@
         word-wrap: break-word;
         overflow-wrap: break-word;
         max-width: 100%;
+        opacity: 1;
+        transition: opacity 0.5s ease-out;
       }
 
       /* 持續播放按鈕 */
@@ -200,6 +191,7 @@
         box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3);
         display: none;
         transition: all 0.3s ease;
+        pointer-events: auto;
       }
 
       .continue-button:hover {
@@ -210,6 +202,13 @@
       .continue-button:active {
         transform: scale(0.95);
       }
+    </style>
+</head>
+<body>
+    <!-- 持續播放按鈕 -->
+    <button id="continue-button" class="continue-button">持續播放</button>
+
+    <div id="scanning-overlay">
       <div class="scanner-inner">
         <div class="scanner-line"></div>
         <div class="corner corner-top-left"></div>
@@ -338,7 +337,6 @@
                 // 確保在可見區域的文字完全不透明
                 textEl.style.opacity = 1;
               }
-              // 注意：不要重置已經消失的文字透明度
             });
             
             if (animationRunning) {
